syntax = "proto3";

package product;

service ProductService {
  rpc CreateProduct (CreateProductDto) returns (ProductResponse);
  rpc GetProduct (GetProductDto) returns (ProductResponse);
  rpc ListProducts (Empty) returns (ProductList);
  // NEW UPDATE RPC
  rpc UpdateProduct (UpdateProductDto) returns (ProductResponse);
}

message CreateProductDto {
  string name = 1;
  double price = 2;
  int32 stock = 3;
  string description = 4;
}

message GetProductDto {
  string id = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
  string description = 5;
}

message ProductList {
  repeated ProductResponse products = 1;
}

message UpdateProductDto {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
  string description = 5;
}


message Empty {}
